# ethercat_src

./: .gitmodules  CMakeLists.txt  README.md  build.sh  install.sh
.github/workflows/: c-cpp.yml
conf/: README.md  ethercat.cfg  ethercatcfg.txt  master_config.xml
documentation/: timing.drawio
src/: CMakeLists.txt  ethercat_src.c  ethercat_src.h  main.c
src/ecat_handler/: CMakeLists.txt  ecat_handler.c  ecat_handler.h
src/log/: CMakeLists.txt  log.c  log.h
src/parser/: CMakeLists.txt  cmdline.c  cmdline.h  cmdlinegen.sh  gengetopt.cmdline
src/xml_conf_parser/: CMakeLists.txt  xml_conf_parser.c  xml_conf_parser.h
